@@ -289,6 +289,17 @@ erlangfile @VARRUN@/aprx.state
 #  "XORSUM" alias "BPQCRC" \- KISS with BPQ "CRC" byte
 #  "SMACK" alias "CRC16"   \- KISS with better CRC
 
+# The  serialport  option is overloaded also with connection
+# to remote socket beyond which is a binary transparent 
+# connection to a serial port.  The remote host side is
+# configured by a string with exclamation marks in between
+# parameter fields:  first a literal "socket", then literal
+# IP address (IPv4 or IPv6), then literal port number.
+# KISS-protocol parameters are same as with normal serial port.
+#
+#serialport  socket!12.34.56.78!2001! 1200 8n1 KISS
+#
+
 
 # The  netbeacon  option.
 # Parameter string (in quotes) is sent to network (without quotes)
